--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,23 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
-            </plugin>
+            </plugin>  
         </plugins>
     </build>
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+<distributionManagement>
+   <repository>
+      <id>repoid</id>
+      <url>http://127.0.0.1:8081/nexus/repository/maven-releases/</url>
+   </repository>
+   <snapshotRepository>
+      <id>repoid</id>
+      <url>http://127.0.0.1:8081/nexus/repository/maven-snapshots/</url>
+   </snapshotRepository>
+</distributionManagement>
 
   <dependencies>
     <dependency>
