--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.aasara</groupId>
   <artifactId>DevOpsProject</artifactId>
-  <version>1.0.SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>DevOpsProject</name>
